fix(sonar): new_violations a 0 en core y ai-engine + cobertura identity al 91.8%
- ai-engine: cierra 13 viols de complejidad y code smells (S3776/S135/S6916/S107/S8786/S2139/S112/S1141/S6206/S6878/S127). InteractionPlanner con PlanInput/UserPick, OutputValidator con scanners string-aware, CaseGenerator con slug sin regex y CaseGenContext, AutomationOrchestrator con GenerationContext/GenerationSummary, ActivityProfileService con record ProfileResult
- core-domain: 0 viols (CoreEmailTemplates, SearchService self-injection, MediaControllerTest/MediaServiceTest S5778)
- identity: coverage 69.4 -> 91.8% con tests de AuthService, controllers, email providers, entities